src/.antlr/GramaticaParser.java
// Generated from c:\Users\Theo\Documents\GitHub\grammar-to-java-compiler\src\Gramatica.g4 by ANTLR 4.9.2
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class GramaticaParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, WS=5, TYPE_INTEGER=6, TYPE_BOOLEAN=7, 
		TYPE_TEXT=8, TYPE_DECIMAL=9, END_LINE=10, ASSIGNMENT=11, MULT=12, DIV=13, 
		SUM=14, SUB=15, NULL=16, NOT=17, OPEN_PARENTHESIS=18, CLOSE_PARENTHESIS=19, 
		OPEN_BRACKET=20, CLOSE_BRACKET=21, LESSER_EQUAL=22, GREATER_EQUAL=23, 
		LESSER=24, GREATER=25, EQUAL=26, NOT_EQUAL=27, AND=28, OR=29, IF=30, ELSE=31, 
		TRUE=32, FALSE=33, TEXT=34, WHILE=35, ATTRIBUTE_SEPARATOR=36, READ=37, 
		PRINT=38, FOR=39, ID=40, DECIMAL=41, INTEGER=42;
	public static final int
		RULE_init = 0, RULE_start = 1, RULE_finish = 2, RULE_body = 3, RULE_sentence = 4, 
		RULE_assignment = 5, RULE_declare_variable = 6, RULE_assign_value = 7, 
		RULE_exp = 8, RULE_reserved = 9, RULE_if_condition = 10, RULE_condition_block = 11, 
		RULE_exp_block = 12, RULE_for_loop = 13, RULE_incrementer_for = 14, RULE_incrementer_type = 15, 
		RULE_while_loop = 16, RULE_read_function = 17, RULE_print_function = 18, 
		RULE_type_var = 19, RULE_boolean_val = 20, RULE_decrement = 21, RULE_increment = 22, 
		RULE_end_line = 23, RULE_assignment_signal = 24, RULE_mult = 25, RULE_div = 26, 
		RULE_sum = 27, RULE_sub = 28, RULE_null_type = 29, RULE_not = 30, RULE_open_parenthesis = 31, 
		RULE_close_parenthesis = 32, RULE_open_bracket = 33, RULE_close_bracket = 34, 
		RULE_lesser_equal = 35, RULE_greater_equal = 36, RULE_lesser = 37, RULE_greater = 38, 
		RULE_equal = 39, RULE_not_equal = 40, RULE_and = 41, RULE_or = 42, RULE_if_stmt = 43, 
		RULE_else_stmt = 44, RULE_true_type = 45, RULE_false_type = 46, RULE_text = 47, 
		RULE_while_stmt = 48, RULE_attribute_separator = 49, RULE_read = 50, RULE_print = 51, 
		RULE_for_stmt = 52, RULE_id = 53, RULE_decimal = 54, RULE_integer = 55;
	private static String[] makeRuleNames() {
		return new String[] {
			"init", "start", "finish", "body", "sentence", "assignment", "declare_variable", 
			"assign_value", "exp", "reserved", "if_condition", "condition_block", 
			"exp_block", "for_loop", "incrementer_for", "incrementer_type", "while_loop", 
			"read_function", "print_function", "type_var", "boolean_val", "decrement", 
			"increment", "end_line", "assignment_signal", "mult", "div", "sum", "sub", 
			"null_type", "not", "open_parenthesis", "close_parenthesis", "open_bracket", 
			"close_bracket", "lesser_equal", "greater_equal", "lesser", "greater", 
			"equal", "not_equal", "and", "or", "if_stmt", "else_stmt", "true_type", 
			"false_type", "text", "while_stmt", "attribute_separator", "read", "print", 
			"for_stmt", "id", "decimal", "integer"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'start'", "'finish'", "'--'", "'++'", null, "'integer'", "'boolean'", 
			"'text'", "'decimal'", "';'", "'='", "'*'", "'/'", "'+'", "'-'", "' '", 
			"'!'", "'('", "')'", "'{'", "'}'", "'<='", "'>='", "'<'", "'>'", "'=='", 
			"'!='", "'&&'", "'||'", "'if'", "'else'", "'true'", "'false'", null, 
			"'while'", "','", "'read'", "'print'", "'for'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, "WS", "TYPE_INTEGER", "TYPE_BOOLEAN", "TYPE_TEXT", 
			"TYPE_DECIMAL", "END_LINE", "ASSIGNMENT", "MULT", "DIV", "SUM", "SUB", 
			"NULL", "NOT", "OPEN_PARENTHESIS", "CLOSE_PARENTHESIS", "OPEN_BRACKET", 
			"CLOSE_BRACKET", "LESSER_EQUAL", "GREATER_EQUAL", "LESSER", "GREATER", 
			"EQUAL", "NOT_EQUAL", "AND", "OR", "IF", "ELSE", "TRUE", "FALSE", "TEXT", 
			"WHILE", "ATTRIBUTE_SEPARATOR", "READ", "PRINT", "FOR", "ID", "DECIMAL", 
			"INTEGER"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Gramatica.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public GramaticaParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class InitContext extends ParserRuleContext {
		public StartContext start() {
			return getRuleContext(StartContext.class,0);
		}
		public BodyContext body() {
			return getRuleContext(BodyContext.class,0);
		}
		public FinishContext finish() {
			return getRuleContext(FinishContext.class,0);
		}
		public InitContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_init; }
	}

	public final InitContext init() throws RecognitionException {
		InitContext _localctx = new InitContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_init);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(112);
			start();
			setState(113);
			body();
			setState(114);
			finish();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StartContext extends ParserRuleContext {
		public StartContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_start; }
	}

	public final StartContext start() throws RecognitionException {
		StartContext _localctx = new StartContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_start);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(116);
			match(T__0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FinishContext extends ParserRuleContext {
		public FinishContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_finish; }
	}

	public final FinishContext finish() throws RecognitionException {
		FinishContext _localctx = new FinishContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_finish);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(118);
			match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BodyContext extends ParserRuleContext {
		public List<SentenceContext> sentence() {
			return getRuleContexts(SentenceContext.class);
		}
		public SentenceContext sentence(int i) {
			return getRuleContext(SentenceContext.class,i);
		}
		public BodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_body; }
	}

	public final BodyContext body() throws RecognitionException {
		BodyContext _localctx = new BodyContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_body);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(123);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << TYPE_INTEGER) | (1L << TYPE_BOOLEAN) | (1L << TYPE_TEXT) | (1L << TYPE_DECIMAL) | (1L << IF) | (1L << WHILE) | (1L << PRINT) | (1L << FOR) | (1L << ID))) != 0)) {
				{
				{
				setState(120);
				sentence();
				}
				}
				setState(125);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SentenceContext extends ParserRuleContext {
		public AssignmentContext assignment() {
			return getRuleContext(AssignmentContext.class,0);
		}
		public End_lineContext end_line() {
			return getRuleContext(End_lineContext.class,0);
		}
		public If_conditionContext if_condition() {
			return getRuleContext(If_conditionContext.class,0);
		}
		public While_loopContext while_loop() {
			return getRuleContext(While_loopContext.class,0);
		}
		public For_loopContext for_loop() {
			return getRuleContext(For_loopContext.class,0);
		}
		public Read_functionContext read_function() {
			return getRuleContext(Read_functionContext.class,0);
		}
		public Print_functionContext print_function() {
			return getRuleContext(Print_functionContext.class,0);
		}
		public SentenceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sentence; }
	}

	public final SentenceContext sentence() throws RecognitionException {
		SentenceContext _localctx = new SentenceContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_sentence);
		try {
			setState(138);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(126);
				assignment();
				setState(127);
				end_line();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(129);
				if_condition();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(130);
				while_loop();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(131);
				for_loop();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(132);
				read_function();
				setState(133);
				end_line();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(135);
				print_function();
				setState(136);
				end_line();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AssignmentContext extends ParserRuleContext {
		public Declare_variableContext declare_variable() {
			return getRuleContext(Declare_variableContext.class,0);
		}
		public Assign_valueContext assign_value() {
			return getRuleContext(Assign_valueContext.class,0);
		}
		public AssignmentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assignment; }
	}

	public final AssignmentContext assignment() throws RecognitionException {
		AssignmentContext _localctx = new AssignmentContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_assignment);
		try {
			setState(142);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case TYPE_INTEGER:
			case TYPE_BOOLEAN:
			case TYPE_TEXT:
			case TYPE_DECIMAL:
				enterOuterAlt(_localctx, 1);
				{
				setState(140);
				declare_variable();
				}
				break;
			case ID:
				enterOuterAlt(_localctx, 2);
				{
				setState(141);
				assign_value();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Declare_variableContext extends ParserRuleContext {
		public Type_varContext type_var() {
			return getRuleContext(Type_varContext.class,0);
		}
		public IdContext id() {
			return getRuleContext(IdContext.class,0);
		}
		public Assignment_signalContext assignment_signal() {
			return getRuleContext(Assignment_signalContext.class,0);
		}
		public ExpContext exp() {
			return getRuleContext(ExpContext.class,0);
		}
		public Declare_variableContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declare_variable; }
	}

	public final Declare_variableContext declare_variable() throws RecognitionException {
		Declare_variableContext _localctx = new Declare_variableContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_declare_variable);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(144);
			type_var();
			setState(145);
			id();
			setState(146);
			assignment_signal();
			setState(147);
			exp(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Assign_valueContext extends ParserRuleContext {
		public IdContext id() {
			return getRuleContext(IdContext.class,0);
		}
		public Assignment_signalContext assignment_signal() {
			return getRuleContext(Assignment_signalContext.class,0);
		}
		public ExpContext exp() {
			return getRuleContext(ExpContext.class,0);
		}
		public Assign_valueContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assign_value; }
	}

	public final Assign_valueContext assign_value() throws RecognitionException {
		Assign_valueContext _localctx = new Assign_valueContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_assign_value);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(149);
			id();
			setState(150);
			assignment_signal();
			setState(151);
			exp(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExpContext extends ParserRuleContext {
		public NotContext not() {
			return getRuleContext(NotContext.class,0);
		}
		public List<ExpContext> exp() {
			return getRuleContexts(ExpContext.class);
		}
		public ExpContext exp(int i) {
			return getRuleContext(ExpContext.class,i);
		}
		public ReservedContext reserved() {
			return getRuleContext(ReservedContext.class,0);
		}
		public MultContext mult() {
			return getRuleContext(MultContext.class,0);
		}
		public DivContext div() {
			return getRuleContext(DivContext.class,0);
		}
		public SumContext sum() {
			return getRuleContext(SumContext.class,0);
		}
		public SubContext sub() {
			return getRuleContext(SubContext.class,0);
		}
		public Lesser_equalContext lesser_equal() {
			return getRuleContext(Lesser_equalContext.class,0);
		}
		public Greater_equalContext greater_equal() {
			return getRuleContext(Greater_equalContext.class,0);
		}
		public LesserContext lesser() {
			return getRuleContext(LesserContext.class,0);
		}
		public GreaterContext greater() {
			return getRuleContext(GreaterContext.class,0);
		}
		public EqualContext equal() {
			return getRuleContext(EqualContext.class,0);
		}
		public Not_equalContext not_equal() {
			return getRuleContext(Not_equalContext.class,0);
		}
		public AndContext and() {
			return getRuleContext(AndContext.class,0);
		}
		public OrContext or() {
			return getRuleContext(OrContext.class,0);
		}
		public ExpContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_exp; }
	}

	public final ExpContext exp() throws RecognitionException {
		return exp(0);
	}

	private ExpContext exp(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		ExpContext _localctx = new ExpContext(_ctx, _parentState);
		ExpContext _prevctx = _localctx;
		int _startState = 16;
		enterRecursionRule(_localctx, 16, RULE_exp, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(158);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case NOT:
				{
				setState(154);
				not();
				setState(155);
				exp(8);
				}
				break;
			case NULL:
			case OPEN_PARENTHESIS:
			case TRUE:
			case FALSE:
			case TEXT:
			case ID:
			case DECIMAL:
			case INTEGER:
				{
				setState(157);
				reserved();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			_ctx.stop = _input.LT(-1);
			setState(200);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,9,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					setState(198);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,8,_ctx) ) {
					case 1:
						{
						_localctx = new ExpContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_exp);
						setState(160);
						if (!(precpred(_ctx, 7))) throw new FailedPredicateException(this, "precpred(_ctx, 7)");
						setState(163);
						_errHandler.sync(this);
						switch (_input.LA(1)) {
						case MULT:
							{
							setState(161);
							mult();
							}
							break;
						case DIV:
							{
							setState(162);
							div();
							}
							break;
						default:
							throw new NoViableAltException(this);
						}
						setState(165);
						exp(8);
						}
						break;
					case 2:
						{
						_localctx = new ExpContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_exp);
						setState(167);
						if (!(precpred(_ctx, 6))) throw new FailedPredicateException(this, "precpred(_ctx, 6)");
						setState(170);
						_errHandler.sync(this);
						switch (_input.LA(1)) {
						case SUM:
							{
							setState(168);
							sum();
							}
							break;
						case SUB:
							{
							setState(169);
							sub();
							}
							break;
						default:
							throw new NoViableAltException(this);
						}
						setState(172);
						exp(7);
						}
						break;
					case 3:
						{
						_localctx = new ExpContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_exp);
						setState(174);
						if (!(precpred(_ctx, 5))) throw new FailedPredicateException(this, "precpred(_ctx, 5)");
						setState(179);
						_errHandler.sync(this);
						switch (_input.LA(1)) {
						case LESSER_EQUAL:
							{
							setState(175);
							lesser_equal();
							}
							break;
						case GREATER_EQUAL:
							{
							setState(176);
							greater_equal();
							}
							break;
						case LESSER:
							{
							setState(177);
							lesser();
							}
							break;
						case GREATER:
							{
							setState(178);
							greater();
							}
							break;
						default:
							throw new NoViableAltException(this);
						}
						setState(181);
						exp(6);
						}
						break;
					case 4:
						{
						_localctx = new ExpContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_exp);
						setState(183);
						if (!(precpred(_ctx, 4))) throw new FailedPredicateException(this, "precpred(_ctx, 4)");
						setState(186);
						_errHandler.sync(this);
						switch (_input.LA(1)) {
						case EQUAL:
							{
							setState(184);
							equal();
							}
							break;
						case NOT_EQUAL:
							{
							setState(185);
							not_equal();
							}
							break;
						default:
							throw new NoViableAltException(this);
						}
						setState(188);
						exp(5);
						}
						break;
					case 5:
						{
						_localctx = new ExpContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_exp);
						setState(190);
						if (!(precpred(_ctx, 3))) throw new FailedPredicateException(this, "precpred(_ctx, 3)");
						setState(191);
						and();
						setState(192);
						exp(4);
						}
						break;
					case 6:
						{
						_localctx = new ExpContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_exp);
						setState(194);
						if (!(precpred(_ctx, 2))) throw new FailedPredicateException(this, "precpred(_ctx, 2)");
						setState(195);
						or();
						setState(196);
						exp(3);
						}
						break;
					}
					} 
				}
				setState(202);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,9,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class ReservedContext extends ParserRuleContext {
		public Open_parenthesisContext open_parenthesis() {
			return getRuleContext(Open_parenthesisContext.class,0);
		}
		public ExpContext exp() {
			return getRuleContext(ExpContext.class,0);
		}
		public Close_parenthesisContext close_parenthesis() {
			return getRuleContext(Close_parenthesisContext.class,0);
		}
		public IntegerContext integer() {
			return getRuleContext(IntegerContext.class,0);
		}
		public DecimalContext decimal() {
			return getRuleContext(DecimalContext.class,0);
		}
		public Boolean_valContext boolean_val() {
			return getRuleContext(Boolean_valContext.class,0);
		}
		public IdContext id() {
			return getRuleContext(IdContext.class,0);
		}
		public TextContext text() {
			return getRuleContext(TextContext.class,0);
		}
		public Null_typeContext null_type() {
			return getRuleContext(Null_typeContext.class,0);
		}
		public ReservedContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_reserved; }
	}

	public final ReservedContext reserved() throws RecognitionException {
		ReservedContext _localctx = new ReservedContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_reserved);
		try {
			setState(215);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case OPEN_PARENTHESIS:
				enterOuterAlt(_localctx, 1);
				{
				setState(203);
				open_parenthesis();
				setState(204);
				exp(0);
				setState(205);
				close_parenthesis();
				}
				break;
			case DECIMAL:
			case INTEGER:
				enterOuterAlt(_localctx, 2);
				{
				setState(209);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case INTEGER:
					{
					setState(207);
					integer();
					}
					break;
				case DECIMAL:
					{
					setState(208);
					decimal();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				break;
			case TRUE:
			case FALSE:
				enterOuterAlt(_localctx, 3);
				{
				setState(211);
				boolean_val();
				}
				break;
			case ID:
				enterOuterAlt(_localctx, 4);
				{
				setState(212);
				id();
				}
				break;
			case TEXT:
				enterOuterAlt(_localctx, 5);
				{
				setState(213);
				text();
				}
				break;
			case NULL:
				enterOuterAlt(_localctx, 6);
				{
				setState(214);
				null_type();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class If_conditionContext extends ParserRuleContext {
		public If_stmtContext if_stmt() {
			return getRuleContext(If_stmtContext.class,0);
		}
		public Condition_blockContext condition_block() {
			return getRuleContext(Condition_blockContext.class,0);
		}
		public Else_stmtContext else_stmt() {
			return getRuleContext(Else_stmtContext.class,0);
		}
		public Exp_blockContext exp_block() {
			return getRuleContext(Exp_blockContext.class,0);
		}
		public If_conditionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_if_condition; }
	}

	public final If_conditionContext if_condition() throws RecognitionException {
		If_conditionContext _localctx = new If_conditionContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_if_condition);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(217);
			if_stmt();
			setState(218);
			condition_block();
			setState(222);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,12,_ctx) ) {
			case 1:
				{
				setState(219);
				else_stmt();
				setState(220);
				exp_block();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Condition_blockContext extends ParserRuleContext {
		public ExpContext exp() {
			return getRuleContext(ExpContext.class,0);
		}
		public Exp_blockContext exp_block() {
			return getRuleContext(Exp_blockContext.class,0);
		}
		public Condition_blockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_condition_block; }
	}

	public final Condition_blockContext condition_block() throws RecognitionException {
		Condition_blockContext _localctx = new Condition_blockContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_condition_block);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(224);
			exp(0);
			setState(225);
			exp_block();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Exp_blockContext extends ParserRuleContext {
		public TerminalNode OPEN_BRACKET() { return getToken(GramaticaParser.OPEN_BRACKET, 0); }
		public BodyContext body() {
			return getRuleContext(BodyContext.class,0);
		}
		public TerminalNode CLOSE_BRACKET() { return getToken(GramaticaParser.CLOSE_BRACKET, 0); }
		public SentenceContext sentence() {
			return getRuleContext(SentenceContext.class,0);
		}
		public Exp_blockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_exp_block; }
	}

	public final Exp_blockContext exp_block() throws RecognitionException {
		Exp_blockContext _localctx = new Exp_blockContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_exp_block);
		try {
			setState(232);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case OPEN_BRACKET:
				enterOuterAlt(_localctx, 1);
				{
				setState(227);
				match(OPEN_BRACKET);
				setState(228);
				body();
				setState(229);
				match(CLOSE_BRACKET);
				}
				break;
			case TYPE_INTEGER:
			case TYPE_BOOLEAN:
			case TYPE_TEXT:
			case TYPE_DECIMAL:
			case IF:
			case WHILE:
			case PRINT:
			case FOR:
			case ID:
				enterOuterAlt(_localctx, 2);
				{
				setState(231);
				sentence();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
